Wed Nov 24 13:44:00 2004  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/Notify/Standard_Event_Persistence.h:
        * orbsvcs/orbsvcs/Notify/Standard_Event_Persistence.cpp:
        * orbsvcs/orbsvcs/Notify/XML_Topology_Factory.h:
        * orbsvcs/orbsvcs/Notify/XML_Topology_Factory.cpp:

          Moved the ACE_FACTORY_DECLARE out of the .cpp into the .h.

Wed Nov 24 13:16:59 2004  Chad Elliott  <elliott_c@ociweb.com>

        * performance-tests/Protocols/sender.cpp:

          Added a static_cast to double to silence vc71.

Wed Nov 24 19:06:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_global.cpp:
          Fixed typo in explanation of -GI commandline option

Wed Nov 24 18:53:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Notify/Notify_Constraint_Visitors.cpp
          The TAO_ETCL_Literal_Constraint constructor accepts an Any*, so
          instead of passing an Any_var, use .ptr() to pass an Any*.

Wed Nov 24 08:06:14 2004  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/Makefile.am:

          Updated.

        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_EVP_PKEY.cpp:
        * orbsvcs/orbsvcs/SSLIOP/params_dup.c:
        * orbsvcs/orbsvcs/SSLIOP/params_dup.h:

          OpenSSL's DHparams_dup() and DSAparams_dup() macros contain
          casts that are invalid C++.  Added C wrapper functions that
          allow them to be called from C++.  Changed SSLIOP_EVP_PKEY.cpp
          to call the wrappers instead of the macros.

Wed Nov 24 10:02:12 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_codegen.cpp:

          Made generation of POA-related includes in the skeleton header
          file, and includes of AMI and AMH related files, conditional
          depending on whether a non-local interface has been seen
          in the IDL file. Thanks again to Johnny Willemsen
          <jwillemsen@remedy.nl> for making the suggestion.
